# HWID-Randomizer

./: BUILD_INSTRUCTIONS.md  BUILD_NOW.txt  CMakeLists.txt  COMPILE_FIXES.md  DOWNLOAD_IMGUI.bat  ERROR_FIX_GUIDE.txt  FINAL_BUILD_STEPS.txt  FIX_ALL_ERRORS.bat  FIX_IMGUI.bat  HWIDRandomizer.sln  HWIDRandomizer.vcxproj  HWIDRandomizer.vcxproj.filters  IMGUI_RENDERING_FIX.txt  LATEST_FIX.txt  QUICKSTART.md  README.md  TROUBLESHOOTING.md  UPDATE_VCXPROJ.bat  app.manifest
docs/: API_REFERENCE.md  KERNEL_DRIVER_SETUP.md  USAGE.md
driver/: hwid_driver.c  hwid_driver.h
include/: Common.h
include/backup/: BackupManager.h
include/engine/: RandomizationEngine.h
include/gui/: GuiManager.h
include/modules/: AllModules.h  CpuModule.h  DiskSerialModule.h  EfiModule.h  GpuModule.h  MacAddressModule.h  MachineGuidModule.h  ModuleBase.h  MonitorModule.h  RamModule.h  SecureBootModule.h  SmbiosModule.h  TpmModule.h  UsbModule.h
include/utils/: Logger.h  Utils.h
src/: main.cpp
src/backup/: BackupManager.cpp
src/engine/: RandomizationEngine.cpp
src/gui/: GuiManager.cpp
src/modules/: CpuModule.cpp  DiskSerialModule.cpp  EfiModule.cpp  GpuModule.cpp  MacAddressModule.cpp  MachineGuidModule.cpp  MonitorModule.cpp  RamModule.cpp  SecureBootModule.cpp  SmbiosModule.cpp  TpmModule.cpp  UsbModule.cpp
src/utils/: Logger.cpp  Utils.cpp
